--- a/en/design.html
+++ b/en/design.html
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Home</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Práctica 1</a></li>
-                    <li><a href="design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Diseño de página web y Planteamiento del Proyecto de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
+                    <li><a href="design-thinking/practica4.html">Definir.</a></li>
+                    <li><a href="design-thinking/practica5.html">Idear.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototipar y Testear..</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="final-project/semana1.html">Week 1</a></li>
-                    <li><a href="final-project/semana2.html">Week 2</a></li>
-                    <li><a href="final-project/semana3.html">Week 3</a></li>
-                    <li><a href="final-project/semana4.html">Week 4</a></li>
-                    <li><a href="final-project/semana5.html">Week 5</a></li>
-                    <li><a href="final-project/semana6.html">Week 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Desarrollo de la página Web</a></li>
+                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diséño</a></li>
+                    <li><a href="proyecto-final/semana3.html">Ejecución del Proyecto</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Presentacion Final </a></li>
+                    <li><a href="proyecto-final/semana6.html">Feria de Proyecto</a></li>
                 </ul>
             </li>
 		</ul>
@@ -48,7 +49,9 @@
                 <h1>design <span>Thiking</span></h1>
             </div>
             <!-- <div class="design__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure harum et, possimus sapiente amet deserunt voluptate ipsum minima provident nesciunt nisi ex exercitationem suscipit officia, velit ratione quo quibusdam laudantium.</p>
+                <p>Uno de los mayores problemas a los que se enfretan las millones de personas que viven en departamentos pequeños, en los edificios ; es del poco espacio que poseen en sus hogares , y la incomodidad de vivir en ellos
+                Una excelente oportunidad de negocio con millones de clientes potenciales es el de fabricar, y vender muebles plegables para este segmento del mercado
+            Estos muebles son perfectos para areas pequeñas, ya que evitan la sensacion de acumulacion, son muy esteticos , practicos y funcionales ademas de faciles de armas, ya que estan compuestas por piezas prefabricada</p>
             </div> -->
         </div>
         <div class="design">
@@ -57,8 +60,8 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empathize and Define</a>
-                    <p class="design__item__info__details">We conducted a survey to students, teachers to determine if the project would be accepted by the community.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Gestion de Proyectos y Planteamiento del Problema</a>
+                    <p class="design__item__info__details">Limite de entrega de Entrega: 27 de Febrero , hasta alas 13:35 </p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/empatizar.png" alt="">
@@ -69,8 +72,8 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica3.html" class="design__item__info__title">Devise</a>
-                    <p class="design__item__info__details">We brainstorm to determine the possible options that our project will have. We also use the 7 hats method to organize and discriminate the ideas given.</p>
+                    <a href="design-thinking/practica3.html" class="design__item__info__title">Taller de Design Thiking</a>
+                    <p class="design__item__info__details">  Limite de Entrega: 13 de Marzo , hasta las 13:35 ..</p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/brainstorm.png" alt="">
@@ -82,8 +85,8 @@
                     <i class="icon-edit-modify-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica4.html" class="design__item__info__title">prototype and test</a>
-                    <p class="design__item__info__details">Realizamos de lluvia de ideas para determinar los posibles opciones que tendra nuestra proyecto. Además usamos el método de los 7 sombreros para organizar y discriminar las ideas dadas.</p>
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Empatizar</a>
+                    <p class="design__item__info__details">Limite de Entrega: 27 de Marzo, hasta las 13:35.</p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/prototipar.png" alt="">
@@ -95,8 +98,29 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica5.html" class="design__item__info__title">Digital Manufacturing</a>
-                    <p class="design__item__info__details">We made a calendar in MDF, using the laser cutter.</p>
+                    <a href="design-thinking/practica5.html" class="design__item__info__title">Definir</a>
+                    <p class="design__item__info__details">Limite de Entrega: 10 de Abril, hasta las 13:35</p>
+                </div
+	   </div>
+
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-edit-modify-streamline"></i>
+                </div>
+                <div class="design__item__info">
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Idear</a>
+                    <p class="design__item__info__details">Limite de Entrega: 24 de Abril , hasta las 13:35.</p>
+                 </div>
+            </div>
+
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-edit-modify-streamline"></i>
+                </div>
+                <div class="design__item__info">
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Protitipar y Testear</a>
+                    <p class="design__item__info__details">Limite de Entrega:8 de Mayo, hasta las 13:35 .</p>
+                
                 </div>
                 <div class="design__item__img">
                     <img src="../img/fabricacion.png" alt="">
@@ -112,7 +136,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2017 - Designed by: <a href="mailto:Maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
             </div>
         </div>
     </footer>
