--- a/en/finalProject.html
+++ b/en/finalProject.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Final Project</title>
+    <title>Digital Manufacturing Project</title>
 </head>
 <body>
     <div id="top">
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Home</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Práctica 1</a></li>
-                    <li><a href="design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Gestion de Proyecto yy Planteamiento del Problema</a></li>
+                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
+                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
+                    <li><a href="design-thinking/practica4.html">Definir</a></li>
+                    <li><a href="design-thinking/practica5.html">Idear</a></li>
+		    <li><a href="design-thinking/practica5.html">Prototipar y Testear</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="final-project/semana1.html">Week 1</a></li>
-                    <li><a href="final-project/semana2.html">Week 2</a></li>
-                    <li><a href="final-project/semana3.html">Week 3</a></li>
-                    <li><a href="final-project/semana4.html">Week 4</a></li>
-                    <li><a href="final-project/semana5.html">Week 5</a></li>
-                    <li><a href="final-project/semana6.html">Week 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Desarrollo de la pagina web</a></li>
+                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diseño</a></li>
+                    <li><a href="proyecto-final/semana3.html">Ejecucion del Proyecto</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Presentacion Final</a></li>
+                    <li><a href="proyecto-final/semana6.html">Feria de Proyecto</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,7 +46,9 @@
         <div class="projectsFinal__title">
             <div class="projectsFinal__title__text">
                 <h1>final <span>project</span></h1>
-            </div>
+            </div>Nuestro proyecto de laboratorio , esta dirigido a uno de los mayores problemas a los que se enfretan las millones de personas que viven en departamentos pequeños, en los edificios ; es del poco espacio que poseen en sus hogares , y la incomodidad de vivir en ellos
+                Una excelente oportunidad de negocio con millones de clientes potenciales es el de fabricar, y vender muebles plegables para este segmento del mercado
+            Estos muebles son perfectos para areas pequeñas, ya que evitan la sensacion de acumulacion, son muy esteticos , practicos y funcionales ademas de faciles de armas, ya que estan compuestas por piezas prefabricada
         </div>
         <div class="projectsFinal">
             <div class="projectsFinal__week">
@@ -53,8 +56,8 @@
                     <i class="icon-pen-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Week 1 - Gant Diagram - Sketch - Functional Decomposition</a>
-                    <p class="projectsFinal__week__details__description">In this file it will be possible to visualize the use of the techniques to be able to start implementing the project of the security system from a mobile application based on the research carried out by the members of the group.</p>
+                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Week 1 - Desarrollo de la Pagina Web </a>
+                    <p class="projectsFinal__week__details__description"> Limite de Entrega: 28 de Febrero , hasta las 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -62,8 +65,8 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Week 2 - Calculations applied to the design</a>
-                    <p class="projectsFinal__week__details__description">We perform calculations on the requirements of the applications, such as bandwidth, etc.</p>
+                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Week 2 - Desarrollo del Diseño</a>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 14 de Marzo , hasta las 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -71,8 +74,8 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Week 3 - 2D and / or 3D design</a>
-                    <p class="projectsFinal__week__details__description">We made 2D graphics of the circuits and 3D of the components that were used in this project.</p>
+                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Week 3 - Ejecucion del Proyecto</a>
+                    <p class="projectsFinal__week__details__description"> Limite de Entrega: 28 de Marzo , hasta las 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -80,8 +83,8 @@
                     <i class="icon-settings-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Week 4 - 50% Implementation and Operation</a>
-                    <p class="projectsFinal__week__details__description">We implement the project, and perform tests with 50% performance.</p>
+                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Week 4 - Presentacion Parte 1</a>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 11 de Abril , hasta las 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -89,8 +92,8 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Week 5 - 100% Implementation and Operation</a>
-                    <p class="projectsFinal__week__details__description">Term of the project and 100% operation</p>
+                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Week 5 - Presentacion Final</a>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 25 de Abril , hasta las 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -98,8 +101,8 @@
                     <i class="icon-receipt-shopping-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Week 6 - Final Report</a>
-                    <p class="projectsFinal__week__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus voluptatem dolores aliquid ipsum accusantium dicta blanditiis et quos. Quos reprehenderit tenetur quod itaque odio! Magni sequi tempora eos dolorum.</p>
+                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Week 6 - Feria de Proyecto</a>
+                    <p class="projectsFinal__week__details__description">Limite de Entrega: 9 de Mayo , hasta las 10:15.</p>
                 </div>
             </div>
             
@@ -113,7 +116,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2017 - Designed by: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
             </div>
         </div>
     </footer>
