--- a/en/design-thinking/practica4.html
+++ b/en/design-thinking/practica4.html
@@ -111,7 +111,7 @@ It is our sustainable philosophy, which has made us members of the Network of Re
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Answers</p>
-                    <p>In this attached document we will appreciate the survey carried out on 21 people in the locality of Arequipa in this sample. las respuestas que tuvieron sobre cada pregutna realizada, la cual fueron 12 preguntas.</p>
+                    <p>In this attached document we will appreciate the survey carried out on 21 people in the locality of Arequipa in this sample.In this document, the answers to the survey are shown.</p>
                     <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
